refactor:change installation_home default to /opt/

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,4 +4,4 @@
 pycharm_url: https://www.jetbrains.com/pycharm/download/?section=
 pycharm_platform: linux
 download_location: /tmp/pycharm.tar.gz
-installation_home: /opt/pycharm
+installation_home: /opt/
