fix:change pycharm url and platform default values

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: MIT-0
 ---
 # defaults file for whalej84.pycharm
-pycharm_url: https://www.jetbrains.com/pycharm/download/?section=
-pycharm_platform: linux
+pycharm_url: https://download.jetbrains.com/python/
+pycharm_platform: pycharm-2025.2.3.tar.gz
 download_location: /tmp/pycharm.tar.gz
 installation_home: /opt/
